coded main-nav to float right and .name to float left @1024 res. Having other issues with main and into collapsing at tablet.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,19 +14,24 @@ header {
 
 .container {
   width: 90%;
+	max-width: 1024px;
   margin: 0 auto;
   text-align: center;
-  padding: 1em 0;
-
+  padding: 5px;
 }
 
 .main-header,
 .contact {
-  background-color: #fafafa;
+	background-color: orange;
 }
 
 h1 {
   color: #4a4a4a;
+}
+
+main {
+
+	border: solid 1px blue;
 }
 
 h2 {
@@ -59,6 +64,8 @@ p {
   margin-top: 20px;
 
 }
+
+
 
 
 a:link {
@@ -207,8 +214,7 @@ padding: 1px;
   .special-text {
     text-align: left;
     float: left;
-    width: 50%;
-    padding-right: 40px;
+    width: 40%;
   }
 
   .main-nav li {
@@ -223,6 +229,11 @@ padding: 1px;
     border-right: solid 1px #4a4a4a;
 
   }
+
+	.intro {
+		border: solid 1px red;
+
+	}
 
 
 
@@ -239,7 +250,25 @@ padding: 1px;
     float: left;
     padding-right: 20px;
   }
-}
+
+	.name {
+		float: left;
+	}
+
+	.main-nav {
+		float: right;
+	}
+
+	.title {
+		margin: 0;
+	}
+
+
+
+
+
+
+
 
 @media (max-width: 420px) {
 
